0.1401
  fixed duprication result value([$value, $value] to $value])
  renamed Validator::Custom::Result::has_missing_param to has_missing
0.1304
  added experimental "Validate::Custom::Result has_missing_param" method
0.1303
  fix missing_params bugs
  added experimental "default_messages" attributes
  depricated "error_infos", "add_error_info", and "remove_error_info"
0.1302
  added experimental "Validator::Custom::Result missing_params" attribute
0.1301
  added experimental negative syntax
0.1211
  fixed document
0.1210
  required Perl 5.008001, enable Carp trust relationship
0.1209
  fixed Carp trust relationship
0.1208
  added the following constraints
    trim
    trim_lead
    trim_trail
    trim_collapse

0.1207
  added the following constraints
    not_defined
    defined
    not_space
    not_blank
    blank
    int
    uint
    ascii
    shift
    duplication
    length
    regex
    http_url
    selected_at_least
    greater_than
    less_than
    equal_to
    between
    decimal
    in_array

0.1206
  updated document
0.1205
  updated document
0.1204
  updated document
0.1203
  updated document
0.1202
  fixed document
  fixed error message
  added EXPERIMENTAL shared_rule attribute
0.1201
  added Validator::Custom::Result message()
  added Validator::Custom::Result messages()
  added Validator::Custom::Result messages_to_hash()
  added Validator::Custom::Result invalid_params()
  added Validator::Custom::Result invalid_rule_keys()
  added Validator::Custom::Result raw_data()
  deprecated Validator::Custom::Result errors()
  deprecated Validator::Custom::Result errors_to_hash()
  deprecated Validator::Custom::Result error()
  deprecated Validator::Custom::Result invalid_keys
0.1103
  updated document.
  Validator::Custom became stable. Backword compatible of 0.1103 is keeped in. You can use Validator::Custom at ease.
0.1102
  removed add_constraint() method(not backword compatible)
0.1101